# FaceTwin

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  deploy.sh  pyproject.toml
agents/: embedding_agent.py  intake_agent.py  mcp_client.py  narrator_agent.py  orchestrator.py  ranking_agent.py
data/: celebrity_embeddings.pkl
facematch/: __init__.py  agent.py
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  celebrity_db.py  embeddings.py  face_detection.py  moderation.py  validation.py
scratch/: diagnose_mcp.py  diagnose_mcp_out.txt  test_pipeline.py
scripts/: bootstrap_celebrity_db.py  build_celebrity_db.py
