[project]
name = "vibematch"
version = "0.1.0"
description = "FaceTwin — offline celebrity face similarity (entertainment only)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "mcp>=1.0.0",
    "gradio>=5.0.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "retinaface>=0.0.18",
]

[project.optional-dependencies]
deepface = [
    "deepface>=0.0.93",
    "tf-keras>=2.16.0",
    "mediapipe>=0.10.0",
]

dev = [
    "uv",
]

[project.scripts]
facematch-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "mcp_server", "facematch"]
